--- a/src/main/resources/templates/home/loginpage.mustache
+++ b/src/main/resources/templates/home/loginpage.mustache
@@ -1,6 +1,6 @@
 {{>layouts/header}}
 <div class="container mt-5">
-    <div class="row justify-content-center">
+    <div class="row justify-content-start">
         <div class="col-md-6">
         <form>
             <div class="mb-3">
