--- a/src/main/resources/templates/home/loginpage.mustache
+++ b/src/main/resources/templates/home/loginpage.mustache
@@ -1,16 +1,18 @@
-{{>layouts/header}}
+{{>layouts/loginheader}}
 <div class="container mt-5">
     <div class="row justify-content-start">
         <div class="col-md-6">
-        <form>
+        <form action="/login" method="post">
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                <label for="exampleInputId" class="form-label">아이디</label>
+                <input type="text" class="form-control" id="exampleInputId" aria-describedby="idHelp"
+                name="id">
+                <div id="idHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <input type="password" class="form-control" id="exampleInputPassword1"
+                name="passwd">
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
