--- a/src/main/resources/templates/home/loginpage.mustache
+++ b/src/main/resources/templates/home/loginpage.mustache
@@ -2,17 +2,17 @@
 <div class="container mt-5">
     <div class="row justify-content-start">
         <div class="col-md-6">
-        <form action="/login" method="post">
+        <form action="/golist" method="post">
             <div class="mb-3">
-                <label for="exampleInputId" class="form-label">아이디</label>
-                <input type="text" class="form-control" id="exampleInputId" aria-describedby="idHelp"
-                name="id">
-                <div id="idHelp" class="form-text">We'll never share your email with anyone else.</div>
+                <label for="exampleInputName" class="form-label">아이디</label>
+                <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp"
+                name="name">
+                <div id="idHelp" class="form-text">We'll never share your id with anyone else.</div>
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword1"
-                name="passwd">
+                name="password">
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
