--- a/src/main/resources/templates/home/list.mustache
+++ b/src/main/resources/templates/home/list.mustache
@@ -1,30 +1,37 @@
 {{>layouts/header}}
-<h2>영화 목록</h2>
+<h1 class="display-5 text-primary fw-bold text-center">🎬 영화 목록</h1>
 
-<table class="table">
+<table class="table table-bordered align-middle text-center">
     <thead class="table-dark">
     <tr>
         <th>제목</th>
+        <th>이미지</th>
         <th>평점</th>
         <th>작성자</th>
     </tr>
     </thead>
     <tbody>
-    {{#MovieDtos}} <!-- 각 영화 DTO 반복 -->
-    <tr>
-        <td>{{title}}</td>
-        <td>{{score}}</td>
-        <td>{{memberName}}</td>
-    </tr>
+    {{#MovieDtos}}
+        <tr>
+            <td class="align-middle">{{title}}</td>
+            <td>
+                <img src="{{imageUrl}}" alt="{{title}}" class="img-fluid" style="max-height: 180px;">
+            </td>
+            <td class="align-middle">{{score}}</td>
+            <td class="align-middle">{{memberName}}</td>
+        </tr>
     {{/MovieDtos}}
-    {{^MovieDtos}} <!-- 리스트가 비어 있을 경우 -->
-    <tr>
-        <td colspan="4">등록된 영화가 없습니다.</td>
-    </tr>
+    {{^MovieDtos}}
+        <tr>
+            <td colspan="4">등록된 영화가 없습니다.</td>
+        </tr>
     {{/MovieDtos}}
     </tbody>
 </table>
-<form action="/movie/new" method="get">
-    <button type="submit" class="btn btn-primary">추가</button>
-</form>
+
+<div class="text-center mt-3">
+    <form action="/movie/new" method="get">
+        <button type="submit" class="btn btn-primary">추가</button>
+    </form>
+</div>
 {{>layouts/footer}}
