--- a/src/main/resources/templates/home/list.mustache
+++ b/src/main/resources/templates/home/list.mustache
@@ -21,17 +21,15 @@
             <td class="align-middle">{{memberName}}</td>
         </tr>
     {{/MovieDtos}}
-    {{^MovieDtos}}
-        <tr>
-            <td colspan="4">등록된 영화가 없습니다.</td>
-        </tr>
-    {{/MovieDtos}}
+
     </tbody>
 </table>
-
+{{#MemberDto}}
 <div class="text-center mt-3">
-    <form action="/movie/new" method="get">
+    <form action="/movie/new/{{id}}" method="get">
+        <input name="id" type="hidden" value="{{id}}">
         <button type="submit" class="btn btn-primary">추가</button>
     </form>
 </div>
+{{/MemberDto}}
 {{>layouts/footer}}
