--- a/src/main/resources/templates/home/new.mustache
+++ b/src/main/resources/templates/home/new.mustache
@@ -2,7 +2,8 @@
 <div class="bg-light p-3 rounded shadow-sm mb-4">
     <h2 class="text-left text-dark m-0">🎥 영화 등록</h2>
 </div>
-<form class="container mt-4" action="/movie/plus" method="post" >
+{{#MemberForm}}
+<form class="container mt-4" action="/movie/plus/{{id}}" method="post" enctype="multipart/form-data">
     <div class="mb-3">
         <label class="form-label">제목</label>
         <input type="text" class="form-control" name="title" style="width: 300px;">
@@ -11,8 +12,12 @@
         <label class="form-label">평점</label>
         <input class="form-control" name="score" style="width: 60px;" maxlength="4">
     </div>
+    <div class="mb-3">
+        <label class="form-label">이미지 업로드</label>
+        <input type="file" class="form-control" name="imageFile" accept="image/*" style="width: 300px;">
+    </div>
     <button type="submit" class="btn btn-primary">등록</button>
-    <a href="/getlist">돌아가기</a>
+    <a href="/getlist/{{id}}">돌아가기</a>
 </form>
-
+{{/MemberForm}}
 {{>layouts/footer}}
