--- a/src/main/resources/templates/home/list.mustache
+++ b/src/main/resources/templates/home/list.mustache
@@ -17,7 +17,7 @@
             <td>
                 <img src="{{imageUrl}}" alt="{{title}}" class="img-fluid" style="max-height: 180px;">
             </td>
-            <td class="align-middle">{{score}}</td>
+            <td class="align-middle">⭐{{score}}</td>
             <td class="align-middle">{{memberName}}</td>
         </tr>
     {{/MovieDtos}}
