--- a/src/main/resources/templates/home/movieinfo.mustache
+++ b/src/main/resources/templates/home/movieinfo.mustache
@@ -17,11 +17,13 @@
                          <!-- 영화 줄거리나 상세 설명 -->
                         hello
                     </p>
-                    <a href="/getlist/" class="btn btn-outline-secondary mt-3">← 목록으로 돌아가기</a>
+
+                    <a href="/getlist/{{viewerId}}" class="btn btn-outline-secondary mt-3">← 목록으로 돌아가기</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 {{/InfoMovie}}
 {{>layouts/footer}}
