--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -14,8 +15,10 @@
 <body>
 <!-- navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+{{#InfoMovie}}
     <div class="container-fluid">
         <a class="navbar-brand" href="/getlist/{{id}}">Home</a>
+{{/InfoMovie}}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
