--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -15,10 +15,10 @@
 <body>
 <!-- navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-{{#InfoMovie}}
+{{#viewerId}}
     <div class="container-fluid">
-        <a class="navbar-brand" href="/getlist/{{id}}">Home</a>
-{{/InfoMovie}}
+        <a class="navbar-brand" href="/getlist/{{viewerId}}">Home</a>
+{{/viewerId}}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
