--- a/src/main/resources/templates/home/loginpage.mustache
+++ b/src/main/resources/templates/home/loginpage.mustache
@@ -6,19 +6,20 @@
             <div class="mb-3">
                 <label for="exampleInputName" class="form-label">아이디</label>
                 <input type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp"
-                name="name">
+                name="name" maxlength="20" style="width: 250px;">
                 <div id="idHelp" class="form-text">We'll never share your id with anyone else.</div>
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword1"
-                name="password">
+                name="password" maxlength="20" style="width: 250px;">
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                 <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary me-6">Submit</button>
+            <a href="/signup" class="btn btn-success">Sign Up</a>
         </form>
         </div>
     </div>
